# dpct

./: CMakeLists.txt
.github/workflows/: deploy.yml  test.yml
.github/workflows/etc/: bld-environment.yml
conda-recipe/: 0001-fix-clang-build-on-osx.patch  bld-lib.bat  bld-py.bat  bld.bat  build-lib.sh  build-py.sh  build.sh  conda_build_config.yaml  meta.yaml
python/: CMakeLists.txt
test/: CMakeLists.txt
